--- a/index(GibHub).html
+++ b/index(GibHub).html
@@ -55,14 +55,14 @@
     <br>
     <p> Actividades de la materia gráficas computacionales</p>
     <ul>
-        <li><a href="act1/basicweb.html">Página basica con imagen </a></li>
-        <li><a href="act2/pagina2-1.html">Golden Globes 2024 </a></li>
-        <li><a href="act3/pagina3-1.html">Arte en canvas</a></li>
-        <li><a href="act4/pagina4-1.html">Animación en canvas</a></li>
-        <li><a href="act5/01-skeleton.html">Vocales</a></li>
-        <li><a href="act6/mouserotado.html">Mouse rotado</a></li>
-        <li><a href="act7/OndaAndrea.html">Onda Sinoidal</a></li>
-        <li><a href="act7/OndaAndrea.html">Onda Sinoidal(ExamenPractico)</a></li>
+        <li><a href="Actividad2/Primerpagina(UNI).html">Página basica con imagen </a></li>
+        <li><a href="Actividad 1/pagina2-1.html">Golden Globes 2024 </a></li>
+        <li><a href="Actividad3/pagina3-1.html">Arte en canvas</a></li>
+        <li><a href="Actividad4/pagina4-1.html">Animación en canvas</a></li>
+        <li><a href="act4/canvas_Interactivo.html">Teclado interactivo (Vocales)</a></li>
+        <li><a href="Actividad5/01-rotate-to-mouse-pelota.html">Mouse rotados</a></li>
+        <li><a href="OndaSinoidal/OndaSinoidal.html">Onda Sinoidal</a></li>
+        <li><a href="RetoOndaSinoidal/Reto_Onda_Sinoidal.html">(ExamenPractico) Onda Sinoidal</a></li>
 
     </ul>
     <!--p es de parrafo-->
