--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <li><a href="Actividad5/01-rotate-to-mouse-pelota.html">Mouse rotados</a></li>
         <li><a href="OndaSinoidal/OndaSinoidal.html">Onda Sinoidal</a></li>
         <li><a href="RetoOndaSinoidal/Reto_Onda_Sinoidal.html">(ExamenPractico) Onda Sinoidal</a></li>
+         <li><a href="Dibujo en canvas.html">(ExamenPractico) Dibujo en canvas</a></li>
 
     </ul>
     <!--p es de parrafo-->
